`width: 1%` on nested table cell causes its table to hog horizontal space https://bugs.webkit.org/show_bug.cgi?id=144696 <rdar://problem/20839572>

Reviewed by David Hyatt and Tim Horton.

This patch is based on https://chromium.googlesource.com/chromium/src/+/9428cfb16993a2329e87c65da096ca295132ef0f

Source/WebCore:

Tests: fast/table/inner-percent-width-affects-outer-floated-div.html
       fast/table/inner-percent-width-doesnt-affect-ancestor-columns.html

* rendering/AutoTableLayout.cpp:
(WebCore::shouldScaleColumnsForParent):
(WebCore::shouldScaleColumnsForSelf):
(WebCore::AutoTableLayout::computeIntrinsicLogicalWidths):
(WebCore::shouldScaleColumns): Deleted.
* rendering/AutoTableLayout.h:
* rendering/RenderTable.cpp:
(WebCore::RenderTable::updateLogicalWidth):
* rendering/TableLayout.h:
(WebCore::TableLayout::scaledWidthFromPercentColumns):

LayoutTests:

* fast/table/inner-percent-width-affects-outer-floated-div-expected.html: Added.
* fast/table/inner-percent-width-affects-outer-floated-div.html: Added.
* fast/table/inner-percent-width-doesnt-affect-ancestor-columns-expected.html: Added.
* fast/table/inner-percent-width-doesnt-affect-ancestor-columns.html: Added.
* platform/mac/fast/table/border-collapsing/cached-change-row-border-width-expected.txt:
* platform/mac/fast/table/border-collapsing/cached-change-tbody-border-width-expected.txt:
* platform/mac/fast/table/max-width-integer-overflow-expected.txt:


Canonical link: https://commits.webkit.org/176075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201234 268f45cc-cd09-0410-ab3c-d52691b4dbfc