Source/WebCore/rendering/TableLayout.h
@@ -21,6 +21,7 @@
 #ifndef TableLayout_h
 #define TableLayout_h
 
+#include "LayoutUnit.h"
 #include <wtf/FastMalloc.h>
 #include <wtf/Noncopyable.h>
 
@@ -39,6 +40,7 @@ public:
     virtual ~TableLayout() { }
 
     virtual void computeIntrinsicLogicalWidths(LayoutUnit& minWidth, LayoutUnit& maxWidth) = 0;
+    virtual LayoutUnit scaledWidthFromPercentColumns() const { return LayoutUnit(0); }
     virtual void applyPreferredLogicalWidthQuirks(LayoutUnit& minWidth, LayoutUnit& maxWidth) const = 0;
     virtual void layout() = 0;
 
